--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <img id="buttonf" src="friends.png" alt="Кнопка">
     </a>
   
-  <a href="main.html">
+  <a href="index.html">
        <img id="buttonta" src="tapn.png" alt="Кнопка">
     </a>
 
