--- a/friends.html
+++ b/friends.html
@@ -62,7 +62,7 @@
         <img id="buttonf" src="friendsn.png" alt="Кнопка">
     </a>
   
-  <a href="main.html">
+  <a href="index.html">
        <img id="buttonta" src="tap.png" alt="Кнопка">
     </a>
 
