--- a/clans.html
+++ b/clans.html
@@ -71,7 +71,7 @@
         <img id="buttonf" src="friends.png" alt="Кнопка">
     </a>
   
-  <a href="main.html">
+  <a href="index.html">
        <img id="buttonta" src="tap.png" alt="Кнопка">
     </a>
 
